More GUI and logic fixes
Now animations do not overlap and crash when following each other but being represented at the same time

--- a/www/styles.css
+++ b/www/styles.css
@@ -89,7 +89,7 @@
   text-align: left;
   word-break: break-word;
   
-  &:not(:hover){
+  &:not(:hover,.phaseanimation){
     height: var(--sun-size);
     text-overflow: ellipsis;
     overflow: hidden;
